--- a/pages/login.html
+++ b/pages/login.html
@@ -223,7 +223,7 @@
               <div
                 class="text-center fs-1 fw-bold text-hsl(236, 17%, 17%) titulo-registro"
               >
-                Rolling Games
+                Alexis Isla Games
               </div>
               <form id="formLogin">
                 <div class="input-group mt-4">
@@ -283,7 +283,7 @@
               </div>
               <br />
               <div class="d-flex gap-1 justify-content-center mt-1 primera-vez">
-                <div>¿Primera vez en Rolling Games?</div>
+                <div>¿Primera vez en Alexis Isla Games?</div>
                 <button
                   type="button"
                   class="boton-registrate"
@@ -447,10 +447,10 @@
       <div class="footer-top">
         <div class="container">
           <div class="footer-brand">
-            <a href="../index.html" class="logo">The Rolling Games</a>
+            <a href="../index.html" class="logo">The Alexis Isla Games</a>
 
             <p class="footer-text">
-              Rolling Games marketplace fue fundada en 2023.
+              Alexis Isla Games marketplace fue fundada en 2023.
             </p>
 
             <ul class="contact-list">
@@ -480,7 +480,7 @@
                 </div>
 
                 <a href="mailto:info@exemple.com" class="item-text"
-                  >Email : therollinggames@gmail.com</a
+                  >Email : alexis@gmail.com</a
                 >
               </li>
             </ul>
